Fix gradient element leaving 1px gap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,6 +59,7 @@ body.page-transition .navbar {
       hsla(0, 0%, 0%, 0.01) 89.2%,
       hsla(0, 0%, 0%, 0)
     );
+    top: -1px;
   }
 
   .gradient-bottom {
@@ -78,7 +79,7 @@ body.page-transition .navbar {
       hsla(0, 0%, 0%, 0.49) 98.8%,
       hsla(0, 0%, 0%, 0.5)
     );
-    bottom: 0;
+    bottom: -1px;
   }
 }
 
@@ -100,6 +101,7 @@ body.page-transition .navbar {
       hsla(0, 0%, 0%, 0.02) 91.7%,
       hsla(0, 0%, 0%, 0)
     );
+    top: -1px;
   }
   .gradient-bottom {
     height: 33vh;
@@ -118,6 +120,6 @@ body.page-transition .navbar {
       hsla(0, 0%, 0%, 0.98) 98.8%,
       hsl(0, 0%, 0%)
     );
-    bottom: 0;
+    bottom: -1px;
   }
 }
